--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Portfolio | Graphic and Digital Media | Aetevelde University College Ghent</title>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-   <h1>Portfolio Cheyenne Curé</h1>
-    <p></p>
+
+   <h1>PORTFOLIO CHEYENNE CURE</h1>
+  
+   <img src="assets/images/ik.jpg">
+
+   <h3>Algemene informatie</h3>
+   <p>Adres: Duddegemstraat 18, 9051 Afsnee</p>
+   <p> Tel.: 0479311383 </p>
+   <a href="mailto:cheyenne.cure@gmail.com">E-mail: cheyenne.cure@gmail.com</a>
+   <h3> Opleidingen </h3>
+ <p> ASO diploma Economie - Moderne Talen aan de IVG-School </p>
+ <p> 2014 - 2017: Bachelor in de Journalistiek aan de Arteveldehogeschool</p>
+ <p> 2017: Bachelor in de Grafische en Digitale Media aan de Arteveldehogeschool </p>
+ 
+ <h3> Hobby's</h3>
+ <ul>
+     <li>Lopen</li>
+     <li>Klimmen</li>
+     <li>Collages maken</li>
+  </ul> 
+  
+<h3> Wat wil ik verder na de opleiding bereiken?</h3>
+<p>Ik zie mezelf werken in een grafisch bedrijf, waar ik de mogelijkheid heb<br>om samen te werken met andere grafisch ontwerpers terwijl 
+    ik in mijn vrije tijd<br>in bijberoep werk om me te ontplooien op zelfstandige basis.</p>
+
+    <p>Mijn voorkeur gaat uit naar een bedrijf waar ik<br>voldoende vrijheid krijg en al doende leer.</p>
 </body>
 </html>
